add copilot help

--- a/job_schedule_problem.ipynb
+++ b/job_schedule_problem.ipynb
@@ -328,11 +328,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code from copilot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the required libraries\n",
+    "from ortools.sat.python import cp_model\n",
+    "\n",
+    "def main():\n",
+    "    # Create a CP-SAT solver\n",
+    "    model = cp_model.CpModel()\n",
+    "\n",
+    "    # Define the variables\n",
+    "    num_machines = 3\n",
+    "    num_manpower = 3\n",
+    "    machines = range(num_machines)\n",
+    "    manpower = range(num_manpower)\n",
+    "\n",
+    "    # Create task variables\n",
+    "    tasks = {}\n",
+    "    for m in machines:\n",
+    "        for p in manpower:\n",
+    "            tasks[(m, p)] = model.NewBoolVar(f\"Task_{m}_{p}\")\n",
+    "\n",
+    "    # Each machine can handle only one task\n",
+    "    for m in machines:\n",
+    "        model.Add(sum(tasks[(m, p)] for p in manpower) == 1)\n",
+    "\n",
+    "    # Each task requires 1 man and 3 hours on a machine\n",
+    "    for p in manpower:\n",
+    "        model.Add(sum(tasks[(m, p)] for m in machines) == 1)\n",
+    "\n",
+    "    # Define the objective function (minimize makespan)\n",
+    "    makespan = model.NewIntVar(0, 100, \"Makespan\")\n",
+    "    for m in machines:\n",
+    "        for p in manpower:\n",
+    "            model.Add(makespan >= (m + 1) * tasks[(m, p)])\n",
+    "\n",
+    "    model.Minimize(makespan)\n",
+    "\n",
+    "    # Create a solver and solve the problem\n",
+    "    solver = cp_model.CpSolver()\n",
+    "    status = solver.Solve(model)\n",
+    "\n",
+    "    if status == cp_model.OPTIMAL:\n",
+    "        print(\"Optimal solution found:\")\n",
+    "        for m in machines:\n",
+    "            for p in manpower:\n",
+    "                if solver.Value(tasks[(m, p)]):\n",
+    "                    print(f\"Task {p} assigned to Machine {m}\")\n",
+    "    else:\n",
+    "        print(\"No optimal solution found.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
@@ -343,21 +401,9 @@
    "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m121"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel) (Local)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "name": "python3"
   }
  },
  "nbformat": 4,
