--- a/app.ipynb
+++ b/app.ipynb
@@ -18,11 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jakelim/miniconda3/lib/python3.12/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    }
+   ],
    "source": [
+    "import collections\n",
+    "import math\n",
     "import pandas as pd\n",
+    "from ortools.sat.python import cp_model\n",
     "\n",
     "from ppcs.storage import DatabaseManager\n",
     "from ppcs.utils import init_logger\n",
@@ -44,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +232,7 @@
        "14          70 days  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +281,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>job_process_index</th>\n",
        "      <th>lo_id</th>\n",
        "      <th>process_code_masked</th>\n",
@@ -280,7 +291,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>lpt_major_module-gate010-CUCEAA-binsp</td>\n",
        "      <td>29.501293</td>\n",
@@ -289,13 +299,11 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>lpt_major_module-gate010-CUCEAA-clean</td>\n",
        "      <td>82.531458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>lpt_major_module-gate010-CUCEAA-ndtest</td>\n",
@@ -304,14 +312,12 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>accessory_drive_module-gate010-CUCKAA-binsp</td>\n",
        "      <td>23.396815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>accessory_drive_module-gate030-CUCKAA-sbassm</td>\n",
@@ -323,11 +329,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4066</th>\n",
-       "      <td>4066</td>\n",
        "      <td>269</td>\n",
        "      <td>15</td>\n",
        "      <td>fan_major_module-gate010-CUAWAA-utstrip</td>\n",
@@ -335,7 +339,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4067</th>\n",
-       "      <td>4067</td>\n",
        "      <td>270</td>\n",
        "      <td>15</td>\n",
        "      <td>lpt_major_module-gate010-CUCCAA-utstrip</td>\n",
@@ -343,7 +346,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4068</th>\n",
-       "      <td>4068</td>\n",
        "      <td>271</td>\n",
        "      <td>15</td>\n",
        "      <td>core_major_module-gate010-CUCAAA-utstrip</td>\n",
@@ -351,7 +353,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4069</th>\n",
-       "      <td>4069</td>\n",
        "      <td>272</td>\n",
        "      <td>15</td>\n",
        "      <td>lpt_major_module-gate010-CUCDAA-utstrip</td>\n",
@@ -359,7 +360,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4070</th>\n",
-       "      <td>4070</td>\n",
        "      <td>273</td>\n",
        "      <td>15</td>\n",
        "      <td>core_major_module-gate010-CUBGAA-utstrip</td>\n",
@@ -367,40 +367,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4071 rows × 5 columns</p>\n",
+       "<p>4071 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0  job_process_index  lo_id  \\\n",
-       "0              0                  0      1   \n",
-       "1              1                  1      1   \n",
-       "2              2                  2      1   \n",
-       "3              3                  3      1   \n",
-       "4              4                  4      1   \n",
-       "...          ...                ...    ...   \n",
-       "4066        4066                269     15   \n",
-       "4067        4067                270     15   \n",
-       "4068        4068                271     15   \n",
-       "4069        4069                272     15   \n",
-       "4070        4070                273     15   \n",
+       "      job_process_index  lo_id                           process_code_masked  \\\n",
+       "0                     0      1         lpt_major_module-gate010-CUCEAA-binsp   \n",
+       "1                     1      1         lpt_major_module-gate010-CUCEAA-clean   \n",
+       "2                     2      1        lpt_major_module-gate010-CUCEAA-ndtest   \n",
+       "3                     3      1   accessory_drive_module-gate010-CUCKAA-binsp   \n",
+       "4                     4      1  accessory_drive_module-gate030-CUCKAA-sbassm   \n",
+       "...                 ...    ...                                           ...   \n",
+       "4066                269     15       fan_major_module-gate010-CUAWAA-utstrip   \n",
+       "4067                270     15       lpt_major_module-gate010-CUCCAA-utstrip   \n",
+       "4068                271     15      core_major_module-gate010-CUCAAA-utstrip   \n",
+       "4069                272     15       lpt_major_module-gate010-CUCDAA-utstrip   \n",
+       "4070                273     15      core_major_module-gate010-CUBGAA-utstrip   \n",
        "\n",
-       "                               process_code_masked  manhour_to_be_planned  \n",
-       "0            lpt_major_module-gate010-CUCEAA-binsp              29.501293  \n",
-       "1            lpt_major_module-gate010-CUCEAA-clean              82.531458  \n",
-       "2           lpt_major_module-gate010-CUCEAA-ndtest              19.103398  \n",
-       "3      accessory_drive_module-gate010-CUCKAA-binsp              23.396815  \n",
-       "4     accessory_drive_module-gate030-CUCKAA-sbassm             128.991356  \n",
-       "...                                            ...                    ...  \n",
-       "4066       fan_major_module-gate010-CUAWAA-utstrip              15.822293  \n",
-       "4067       lpt_major_module-gate010-CUCCAA-utstrip              66.095223  \n",
-       "4068      core_major_module-gate010-CUCAAA-utstrip               7.316237  \n",
-       "4069       lpt_major_module-gate010-CUCDAA-utstrip              26.873341  \n",
-       "4070      core_major_module-gate010-CUBGAA-utstrip              24.514777  \n",
+       "      manhour_to_be_planned  \n",
+       "0                 29.501293  \n",
+       "1                 82.531458  \n",
+       "2                 19.103398  \n",
+       "3                 23.396815  \n",
+       "4                128.991356  \n",
+       "...                     ...  \n",
+       "4066              15.822293  \n",
+       "4067              66.095223  \n",
+       "4068               7.316237  \n",
+       "4069              26.873341  \n",
+       "4070              24.514777  \n",
        "\n",
-       "[4071 rows x 5 columns]"
+       "[4071 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "[101 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "2  Monday; Tuesday; Wednesday; Thursday; Friday  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "4             14.777426  DARKRM01; DARKRM02; DARKRM03; DARKRM04; DARKRM...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,11 +838,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample testing script"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "machines_count=380\n",
+      "horizon=200955\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df_input_workscope.rename(columns={\"process_code_masked\": \"process_code\"})\n",
+    "# TODO: handle the missing values here.\n",
+    "# this is because of std computation during the construciton of db\n",
+    "# n=1, hence std=NaN, hence workscope is unable to predict a value\n",
+    "df.dropna(subset=[\"manhour_to_be_planned\"], inplace=True)\n",
+    "df.manhour_to_be_planned = df.manhour_to_be_planned.apply(lambda x: int(math.ceil(x)))\n",
+    "machines_count = df[\"process_code\"].nunique()\n",
+    "print(f\"{machines_count=}\")\n",
+    "all_machines = range(machines_count)\n",
+    "horizon = df.manhour_to_be_planned.sum()\n",
+    "print(f\"{horizon=}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = cp_model.CpModel()\n",
+    "\n",
+    "# Named tuple to store information about created variables.\n",
+    "task_type = collections.namedtuple(\"task_type\", \"start end interval\")\n",
+    "# Named tuple to manipulate solution information.\n",
+    "assigned_task_type = collections.namedtuple(\n",
+    "    \"assigned_task_type\", \"start job index duration\"\n",
+    ")\n",
+    "\n",
+    "# Lets assume that 1 task has only 1 machine for now\n",
+    "all_tasks = {}\n",
+    "machine_to_intervals = collections.defaultdict(list)\n",
+    "for i, row in df.iterrows():\n",
+    "    machine = row[\"process_code\"]\n",
+    "    duration = row[\"manhour_to_be_planned\"]\n",
+    "    suffix = f\"_{row['lo_id']}_{row['process_code']}\"\n",
+    "    start_var = model.new_int_var(0, horizon, f\"start{suffix}\")\n",
+    "    end_var = model.new_int_var(0, horizon, f\"end{suffix}\")\n",
+    "    interval_var = model.new_interval_var(\n",
+    "        start_var, duration, end_var, f\"interval{suffix}\"\n",
+    "    )\n",
+    "    all_tasks[row[\"lo_id\"], row[\"process_code\"]] = task_type(\n",
+    "        start=start_var, end=end_var, interval=interval_var\n",
+    "    )\n",
+    "    machine_to_intervals[machine].append(interval_var)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create and add disjunctive constraints.\n",
+    "for machine in all_machines:\n",
+    "    model.add_no_overlap(machine_to_intervals[machine])\n",
+    "\n",
+    "# Precedences inside a job.\n",
+    "for job_id, job in enumerate(jobs_data):\n",
+    "    for task_id in range(len(job) - 1):\n",
+    "        model.add(\n",
+    "            all_tasks[job_id, task_id + 1].start >= all_tasks[job_id, task_id].end\n",
+    "        )"
+   ]
   }
  ],
  "metadata": {
@@ -850,6 +936,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
