--- a/job_schedule_problem.ipynb
+++ b/job_schedule_problem.ipynb
@@ -73,12 +73,12 @@
     }
    ],
    "source": [
-    "!pip install ortools"
+    "# !pip install ortools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -102,7 +102,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
    "source": [
     "jobs_data = [  # task = (machine_id, processing_time).\n",
     "    [(0, 3), (1, 2), (2, 2)],  # Job0\n",
@@ -152,7 +160,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {0: [interval_0_0(start = start_0_0, size = 3, end = end_0_0), interval_1_0(start = start_1_0, size = 2, end = end_1_0)], 1: [interval_0_1(start = start_0_1, size = 2, end = end_0_1), interval_1_2(start = start_1_2, size = 4, end = end_1_2), interval_2_0(start = start_2_0, size = 4, end = end_2_0)], 2: [interval_0_2(start = start_0_2, size = 2, end = end_0_2), interval_1_1(start = start_1_1, size = 1, end = end_1_1), interval_2_1(start = start_2_1, size = 3, end = end_2_1)]})\n"
+     ]
+    }
+   ],
    "source": [
     "model = cp_model.CpModel()\n",
     "\n",
@@ -179,7 +195,9 @@
     "        all_tasks[job_id, task_id] = task_type(\n",
     "            start=start_var, end=end_var, interval=interval_var\n",
     "        )\n",
-    "        machine_to_intervals[machine].append(interval_var)"
+    "        machine_to_intervals[machine].append(interval_var)\n",
+    "\n",
+    "print(machine_to_intervals)"
    ]
   },
   {
@@ -404,6 +422,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
